--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,14 @@
         "league/plates": "^3.6",
         "httpsoft/http-emitter": "^1.1",
         "php-di/php-di": "^7.1",
-        "vlucas/phpdotenv": "^5.6"
+        "vlucas/phpdotenv": "^5.6",
+        "phpmailer/phpmailer": "^7.0"
     },
     "autoload":{
         "psr-4":{
             "App\\":"app/",
-            "Framework\\":"app/Framework"
+            "Framework\\":"app/Framework",
+            "Services\\":"app/Services"
         }
     }
 }
